--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "react-dom": "16.8.6",
     "react-scripts": "^3.4.1"
   },
+  "engines": {
+    "node": "12.16.3"
+  },
   "devDependencies": {
     "typescript": "3.3.3"
   },
